k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eventora
  labels:
    name: eventora
